--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,34 +1,16 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch - Debug",
             "type": "cppvsdbg",
             "request": "launch",
+            "console": "internalConsole",
+            "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": "Build - Debug",
-            "program": "${workspaceRoot}/out/debug/${fileDirnameBasename}.exe",
+            "name": "Debug",
+            "program": "${workspaceFolder}/out/debug/program_d.exe",
             "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceRoot}/out/debug",
-            "environment": [],
-            "console": "internalConsole",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": "Launch - Release",
-            "type": "cppvsdbg",
-            "request": "launch",
-            "preLaunchTask": "Build - Release",
-            "program": "${workspaceRoot}/out/release/${fileDirnameBasename}.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceRoot}/out/release",
-            "environment": [],
-            "console": "internalConsole",
-            "internalConsoleOptions": "openOnSessionStart"
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
