--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         {
             "type": "cppvsdbg",
             "request": "launch",
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": "Build - Debug",
             "name": "Debug",
